--- a/project2-age-calculator/style.css
+++ b/project2-age-calculator/style.css
@@ -4,3 +4,42 @@ body {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   background-color: #f8f8f8;
 }
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.mama{
+  background-color: white;
+  width: 30%;
+  margin:8% auto;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+  border-radius: 5px;
+}
+input{
+  width: 90%;
+  padding: 8px;
+  border-radius: 5px;
+}
+
+button{
+  display: block;
+  width: 50%;
+  margin: auto;
+  padding: 8px;
+  margin-top: 10px;
+  border-radius: 5px;
+  background-color: rgba(14, 160, 218, 0.993);
+  color: white;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+.mama h1{
+  padding-bottom: 10px;
+}
+.mama h2{
+  font-size: small;
+  padding-bottom: 10px;
+}
