--- a/project3-user-live-filter/style.css
+++ b/project3-user-live-filter/style.css
@@ -8,3 +8,40 @@ body {
   overflow: hidden;
   margin: 0;
 }
+input, button{
+  display: block;
+  width: 90%;
+  padding: 8px;
+  margin-top: 8px;
+  border-radius: 50px;
+  margin: auto;
+}
+form{
+  background-color: rgb(0, 102, 255);
+  /* width: 100%; */
+  padding: 20px;
+}
+.contena{
+  margin:8% auto;
+  width: 100%;
+  max-width: 500px;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.9);
+  border-radius: 5px;
+}
+.user{
+  padding-top: 10px;
+  padding-left: 15px;
+}
+.user img{
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
+
+.user article{
+  display: flex;
+  align-items: center;
+}
+.username{
+  padding-left: 30px;
+}
