--- a/project3-user-live-filter/style.css
+++ b/project3-user-live-filter/style.css
@@ -7,9 +7,10 @@ body {
   height: 100vh;
   overflow: hidden;
   margin: 0;
+  width: 95%;
 }
 input, button{
-  display: block;
+    display: block;
   width: 90%;
   padding: 8px;
   margin-top: 8px;
@@ -37,11 +38,13 @@ form{
   width: 50px;
   height: 50px;
 }
-
 .user article{
   display: flex;
   align-items: center;
 }
 .username{
   padding-left: 30px;
+}
+p{
+  font-size: x-small;
 }
